# made-with-python-tutorials

./: .gitignore  LICENSE  README.md
vivlio/: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
vivlio/tests/: test_convert.py
vivlio/web/: main.py
vivlio/web/api/: endpoints.py
vivlio/web/models/: schemas.py
vivlio/web/services/: convert.py
vivlio/web/static/css/: styles.css
vivlio/web/static/js/: scripts.js
vivlio/web/templates/: index.html
