[tool.poetry]
name = "made-with-python-tutorials"
version = "0.1.0"
package-mode = false
description = "Vivlío is a web application that converts PDF files into audiobooks."
authors = ["Your Name <dev@madewithpython.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydub = "^0.25.1"
PyMuPDF = "^1.18.15"
gtts = "^2.2.3"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "0.4.7"
aiofiles = "24.1.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
icecream = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []
exclude = [".venv", "ops", "migrations"]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F"]
lint.unfixable = []